--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,96 @@
 @charset "utf-8";
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+/* 전체 */
+.container {
+  width: 1200px;
+  height: 700px;
+  background-color: aqua;
+}
+/* 상단 */
+header {
+  width: 1200px;
+  height: 100px;
+  position: relative;
+}
+.header-logo {
+  width: 200px;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: brown;
+}
+.menu {
+  width: 1000px;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: violet;
+}
+.hover-menu {
+    margin: 25px 25px;
+  width: 600px;
+  height: 50px;
+  float: right;
+  background-color: #fff;
+}
+.hover-menu ul li {
+  float: left;
+  color: #333;
+  width: calc(100% / 4);
+  list-style: none;
+}
+.hover-menu ul li:hover{
+    color: #fff;
+    height: 50px;
+    /* padding: 14px; */
+    background-color: black;
+}
+/* 메인 */
+.image-slide {
+  width: 100%;
+  height: 300px;
+  background-color: rgb(255, 103, 103);
+}
+.main-bottom div {
+  float: left;
+  width: calc(1200px / 3);
+  height: 200px;
+}
+.notice{
+    background-color: rgb(214, 235, 121);
+}
+.banner{
+    background-color: antiquewhite;
+}
+.link{
+    background-color: rgb(243, 161, 54);
+}
+/* 하단 */
+footer {
+  width: 100%;
+  height: 100px;
+}
+.footer-logo {
+  width: 200px;
+  height: 100px;
+  float: left;
+  background-color: rgb(58, 158, 103);
+}
+.copyright {
+  width: 800px;
+  height: 100px;
+  float: left;
+  background-color: rgb(62, 62, 255);
+}
+.sns {
+  width: 200px;
+  height: 100px;
+  float: left;
+  background-color: rgb(235, 127, 217);
+}
